objects/Material_Item__c/fields/Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>