objects/Material_Item__c/fields/Calc_Unit__c.field-meta.xml
<CustomField>
    <fullName>Calc_Unit__c</fullName>
    <label>Calc Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>