objects/Material_Item__c/fields/Cost_of_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Inventory__c</fullName>
    <formula>IF(ISPICKVAL( Calc_Unit__c ,&quot;Size&quot;), 

IF(ISNULL( Qty_On_Hand_Roll__c ),0, 

Qty_On_Hand_Roll__c ) *  Total_Cost_Each__c 
, 

IF( ISPICKVAL(Calc_Unit__c ,&quot;Each&quot;),

( Qty_On_Hand__c * ( IF(ISNULL( Price_Per_Unit__c ),0,Price_Per_Unit__c ) )) 
, 

IF(ISPICKVAL(Calc_Unit__c ,&quot;Sheet&quot;),

 (  Qty_On_Hand_Case__c * ( IF(ISNULL(    Price_Per_Case__c ),0,Price_Per_Case__c )))

,null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Inventory</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>