objects/Material_Item__c/fields/Dept_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dept_Contact__c</fullName>
    <label>Dept Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>