objects/Material_Item__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File old</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>