objects/Material_Item__c/fields/File_Photo__c.field-meta.xml
<CustomField>
    <fullName>File_Photo__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp; Attachment_ID__c , &quot;NO IMAGE&quot; , $Setup.ImageSizeforBillboardMaterialItemNew__c.MaterialItem_File_Height__c , $Setup.ImageSizeforBillboardMaterialItemNew__c.MaterialItem_File_Width__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File</label>
    <type>Text</type>
</CustomField>