objects/Material_Item__c/fields/Labor_Click_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labor_Click_Charge__c</fullName>
    <label>Labor Click Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>