objects/Material_Item__c/fields/Labor_Linear_Foot_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Linear_Foot_Cost__c</fullName>
    <label>Labor Linear Foot Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>