objects/Material_Item__c/fields/Length_inches__c.field-meta.xml
<CustomField>
    <fullName>Length_inches__c</fullName>
    <label>Length (inches)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>