objects/Material_Item__c/fields/Machine_Click_Charge__c.field-meta.xml
<CustomField>
    <fullName>Machine_Click_Charge__c</fullName>
    <label>Machine Click Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>