objects/Material_Item__c/fields/Machine_OH_Linear_Foot_Cost__c.field-meta.xml
<CustomField>
    <fullName>Machine_OH_Linear_Foot_Cost__c</fullName>
    <label>Machine OH Linear Foot Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>