objects/Material_Item__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>