objects/Material_Item__c/fields/Manufacturer_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Item_No__c</fullName>
    <label>Manufacturer Item No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>