objects/Material_Item__c/fields/Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Material_ID__c</fullName>
    <externalId>true</externalId>
    <label>Material ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>