objects/Material_Item__c/fields/Material_Linear_Foot_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Linear_Foot_Cost__c</fullName>
    <formula>(Total_Cost_Each__c /( Length_inches__c /12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Linear Foot Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>