objects/Material_Item__c/fields/Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Max_Qty__c</fullName>
    <label>Max Order Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>