objects/Material_Item__c/fields/Out_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checkbox used for to the material item detail layout.</description>
    <label>Out of Stock</label>
    <type>Checkbox</type>
</CustomField>