objects/Material_Item__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Case (200)</fullName>
            </value>
            <value>
                <fullName>Cae (2000)</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Roll (1000)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>