objects/Material_Item__c/fields/Price_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Case__c</fullName>
    <formula>Price_Per_Sheet__c  *  Case_Pack__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (Per Case)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>