objects/Material_Item__c/fields/Price_Per_Case_Each__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Case_Each__c</fullName>
    <label>Price (Per Case)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>