objects/Material_Item__c/fields/Price_Per_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Sheet__c</fullName>
    <formula>((Price_Per_M__c  / 1000) * 1.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (Per Sheet)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>