objects/Material_Item__c/fields/Production_Estimate_Template__c.field-meta.xml
<CustomField>
    <fullName>Production_Estimate_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Estimate Template</label>
    <referenceTo>Production_Estimate_Template__c</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>