objects/Material_Item__c/fields/Qty_On_Hand_Case__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand_Case__c</fullName>
    <formula>IF( Case_Pack__c = 0, 0,Qty_On_Hand__c/ Case_Pack__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty On Hand (Case)</label>
    <precision>18</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>