objects/Material_Item__c/fields/Qty_On_Hand_Roll__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand_Roll__c</fullName>
    <formula>IF(Roll_LF__c = 0, 0,Qty_On_Hand__c/Roll_LF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty On Hand (Roll)</label>
    <precision>18</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>