objects/Material_Item__c/fields/Re_Stocking__c.field-meta.xml
<CustomField>
    <fullName>Re_Stocking__c</fullName>
    <description>&quot;Re-Stocking&quot; date field to the material items details layout.
On the store order, if the check box is selected, add some text to the material line item in list view showing &quot;Out of Stock, and the Restock Date&quot;.</description>
    <label>Expected In-Stock Date</label>
    <type>Date</type>
</CustomField>