objects/Material_Item__c/fields/Roll_LF__c.field-meta.xml
<CustomField>
    <fullName>Roll_LF__c</fullName>
    <formula>Length_inches__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roll LF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>