objects/Material_Item__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>30</length>
    <type>Text</type>
</CustomField>