objects/Material_Item__c/fields/Store_Front__c.field-meta.xml
<CustomField>
    <fullName>Store_Front__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Front</label>
    <type>Checkbox</type>
</CustomField>