objects/Material_Item__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>All Stores</fullName>
            </value>
            <value>
                <fullName>Arbys&apos;s</fullName>
            </value>
            <value>
                <fullName>BioDiesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>