objects/Material_Item__c/fields/Supplier_No__c.field-meta.xml
<CustomField>
    <fullName>Supplier_No__c</fullName>
    <label>Preferred Vendor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>