objects/Material_Item__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>if(( $Organization.Id = &apos;00D5e000003VeLW&apos;) || ( $Organization.Id = &apos;00D6s0000008p9o&apos;) ,Price_Each__c * 0.06,Price_Each__c * 0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>