objects/Material_Item__c/fields/Total_Cost_Each__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Each__c</fullName>
    <formula>Price_Each__c  + Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Each</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>