objects/Material_Item__c/fields/Total_Cost_Per_linear_Foot__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Per_linear_Foot__c</fullName>
    <formula>Machine_OH_Linear_Foot_Cost__c  +  Material_Linear_Foot_Cost__c  +  Labor_Linear_Foot_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Per linear Foot</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>