objects/Material_Item__c/recordTypes/Each.recordType-meta.xml
<RecordType>
    <fullName>Each</fullName>
    <active>true</active>
    <label>Each</label>
</RecordType>