objects/Material_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Qty_On_Hand__c</columns>
    <columns>Calc_Unit__c</columns>
    <columns>GL_Department__c</columns>
    <columns>GL_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>