objects/Material_Item__c/listViews/Inventory_View.listView-meta.xml
<ListView>
    <fullName>Inventory_View</fullName>
    <columns>NAME</columns>
    <columns>Qty_On_Hand__c</columns>
    <columns>Qty_On_Hand_Roll__c</columns>
    <columns>Cost_of_Inventory__c</columns>
    <columns>Min__c</columns>
    <filterScope>Everything</filterScope>
    <label>Inventory View</label>
    <language>en_US</language>
</ListView>