objects/Material_Item__c/listViews/Production_Materials.listView-meta.xml
<ListView>
    <fullName>Production_Materials</fullName>
    <columns>NAME</columns>
    <columns>Calc_Unit__c</columns>
    <columns>Equipment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Store_Front__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Calc_Unit__c</field>
        <operation>equals</operation>
        <value>Sheet</value>
    </filters>
    <label>Production Materials</label>
</ListView>